--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function naviGate(int) {
 }
 
 function startUp() {
-    document.getElementById("viewer").innerHTML = "<img src='bougainvillea.jpg' />";
+    document.getElementById("viewer").innerHTML = "<img src='bougainvillea.jpg' class='img-responsive' alt='portrait in mexico' />";
     document.location.hash = "";
 }
 
