--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ function clearTabs() {
     }
 }
 
+//Set the functions to fire when each menu button(or the jumbotron) is clicked
 $(document).ready(function() {
     for (var i = 0; i < $(".butn").length; i++) {
         $(document).on('click', '.butn', function() {
