--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="css/base.css">
 
 <script src="jquery-2.1.4.min.js"></script>
 <script src="bootstrap.min.js"></script>
@@ -80,12 +81,11 @@ margin-bottom: 50px;
     <table id="nav" class="table table-condensed table-hover">
         <tr><td id="pt0" class="butn">Directions & Parking</td></tr>
         <tr><td id="pt1" class="butn">Hotels</td></tr>
-        <tr><td id="pt2" class="butn">Local Attractions</td></tr>
+        <tr><td id="pt2" class="butn">Local Attractions and Transportation</td></tr>
         <tr><td id="pt3" class="butn">About Us</td></tr>
         <tr><td id="pt4" class="butn">Who's Who</td></tr>
         <tr><td id="pt5" class="butn">FAQ</td></tr>
-        <tr><td id="pt6" class="butn">Registry</td></tr>
-        <tr><td id="pt7" class="butn">R.S.V.P.</td></tr>
+        <tr><td id="pt6" class="butn">R.S.V.P.</td></tr>
     </table>
   </div>
   <div class="col-sm-9">
